# Cmake_Mastery

./: .gitmodules
2_CMake/1_HelloWorld/: CMakeLists.txt  main.cc
2_CMake/2_BASICPROJECT/: CMakeLists.txt
2_CMake/3_Intermediate_project/: CMakeLists.txt
2_CMake/3_Intermediate_project/app/: CMakeLists.txt  main.cc
2_CMake/3_Intermediate_project/src/my_lib/: CMakeLists.txt  my_lib.cc
2_CMake/8_FetchContent/: CMakeLists.txt
2_CMake/9_CONAN/: Makefile  conanfile.txt
2_CMake/9_CONAN/app/: CMakeLists.txt  main.cc
